package com.doconnectai.entity;

public enum Role {
	
	ADMIN,
	USER
}
