package com.doconnectai.entity;

public enum VoteType {
	
	UPVOTE,
	
	DOWNVOTE

}
